refactor: 권한 및 인증 관련 에러 핸들링 (#133)
* feat: add securityFilterChain exceptionHandling : authenticaitonEntryPoint, accessDenied

* refactor: validateToken throw Exception

* refactor: add token type distinction to validateToken method

* test: refactor jwtprovider test

* test: add JwtProviderTest expired_token

* fix: Register @PreAuthorize exception in GlobalExceptionHandler to return custom message with 403 response

* refactor: validate refresh token

* refactor: throw InvalidRefreshTokenException

* refactor: add custom exceptions

* test/refacotr: thorw exception success

* fix: 부스에 대한 QR코드 정보 수정

* fix: 세션에 대한 QR코드 정보 수정

* fix: test에 secretCode 추가

* fix: secretCode 로직 수정

* fix : test 해결 및 채용담당자 오류 수정

* fix: 세션 중복 참여에 대한 유효성 검증 추가

* fix: 세션 참여율에 대해 참여하지 않은 세션도 조회

* feat: add Exceptions

---------

Signed-off-by: leeminjung1 <52394879+leeminjung1@users.noreply.github.com>
Co-authored-by: wjd4204 <brian876373@gmail.com>
Co-authored-by: Kimseungin0529 <whffkaos007@naver.com>